Add Comment resource partial views

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,9 +9,17 @@
     <%= link_to "Edit", edit_article_path(@article) %>
 </div>
 <div>
-    <%= link_to "Delete", article_path(@article), data: {
+    <%= link_to "Destroy", article_path(@article), data: {
         turbo_method: :delete,
         turbo_confirm: "Are you sure?"
     } %>
 </div>
+
+<h2>Comments</h2>
+
+<%= render @article.comments %>
+
+<h2>Add a comment:</h2>
+
+<%= render "comments/form", article: @article%>
 
